--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,14 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #383838;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Open Sans', sans-serif;
+}
+
 ul.social {
   display: flex;
   justify-content: space-around;
@@ -32,4 +43,16 @@ ul.social li a:hover {
   transform: scale(1.25);
   background-color: #c4c4c4;
   fill: white;
+}
+
+@media (max-width: 500px) {
+  ul.social li {
+    margin: 12px;
+  }
+
+  ul.social li a {
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+  }
 }
