--- a/public/index.css
+++ b/public/index.css
@@ -1,12 +1,78 @@
+html {
+  font-size: 10px;
+}
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
   color: #383838;
 }
 h1,
 h2,
 h3,
 h4 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  margin: 0;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: 1fr min-content min-content 1fr;
+  grid-template-areas:
+    '. aside'
+    'header aside'
+    'main aside'
+    '. aside';
+
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.header {
+  grid-area: header;
+  font-size: 4rem;
+}
+
+.text {
+  position: relative;
+  grid-area: main;
+  margin: 0;
+  font-size: 5rem;
+}
+
+.text .roll {
+  font-weight: bold;
+}
+
+.text:hover {
+  cursor: pointer;
+}
+
+.text:hover .roll {
+  text-decoration: underline;
+  text-decoration-thickness: 7%;
+}
+
+.caret {
+  display: none;
+  position: absolute;
+  top: 2rem;
+  right: -1rem;
+  border: 0;
+  background: transparent;
+  width: 3.5rem;
+  cursor: pointer;
+}
+
+.text:hover .caret {
+  display: block;
+}
+
+main .aside {
+  grid-area: aside;
+  background: rebeccapurple;
+  height: 400px;
 }
 
 ul.social {
