fix small styling issues

--- a/components/Template/Footer/footer.module.scss
+++ b/components/Template/Footer/footer.module.scss
@@ -1,13 +1,13 @@
 .footerlist {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 li.listitem {
-  margin: clamp(0.625rem, 4vw, 1.875rem);
+  margin: clamp(0.625rem, 2vw, 1.875rem);
 
   a {
     box-sizing: border-box;
