--- a/app/global.module.scss
+++ b/app/global.module.scss
@@ -19,6 +19,8 @@
   display: block;
   margin-inline: auto;
   text-align: center;
+  max-width: 90vw;
+  height: auto;
   @media screen and (min-width: 700px) {
     margin: auto;
     float: left;
